[package]
edition = "2021"
name = "iot-home"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.6"
async-graphql-axum = "5.0.6"
axum = {version = "0.6.6", features = ["ws"]}
dotenv = "0.15.0"
futures = "0.3.26"
paste = "1.0.11"
rumqttc = "0.20.0"
rumqttd = "0.12.6"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = {version = "1.25.0", features = ["rt", "rt-multi-thread", "macros"]}
tokio-stream = {version = "0.1.11", features = ["sync"]}

[patch.crates-io]
rumqttd = {path = './target/patch/rumqttd-0.12.6'}

[package.metadata.patch.rumqttd]
patches = [
  "patch/rumqttd/broker.patch",
  "patch/rumqttd/export.patch",
  "patch/rumqttd/mod_export.patch",
]
version = "0.12.6"
