[package]
edition = "2021"
name = "iot-home"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {version = "5.0.6", features = ["time", "uuid"]}
async-graphql-axum = "5.0.6"
axum = {version = "0.6.6", features = ["ws"]}
dotenv = "0.15.0"
futures = "0.3.26"
paste = "1.0.11"
rumqttc = "0.20.0"
rumqttd = "0.12.6"
sea-orm = {version = "0.11.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print", "with-time", "with-uuid"]}
sea-orm-migration = "0.11.1"
serde = "1.0.152"
serde_json = "1.0.93"
serde_repr = "0.1.11"
stream-cancel = "0.8.1"
time = {version = "0.3.20", features = ["serde-human-readable", "std"]}
tokio = {version = "1.25.0", features = ["rt", "rt-multi-thread", "macros"]}
tokio-stream = {version = "0.1.11", features = ["sync"]}
tower-http = {version = "0.4.0", features = ["cors"]}
uuid = "1.3.0"

[patch.crates-io]
rumqttd = {path = "./target/patch/rumqttd-0.12.6"}

[package.metadata.patch.rumqttd]
patches = [
  "patch/rumqttd/broker.patch",
  "patch/rumqttd/export.patch",
  "patch/rumqttd/mod_export.patch",
]
version = "0.12.6"
